2015-06-24  Alan Lawrence  <alan.lawrence@arm.com>

	* doc/invoke.texi: Clarify AArch64 feature modifiers (no)fp, (no)simd
	and (no)crypto.

2015-06-24  Alan Lawrence  <alan.lawrence@arm.com>

	* config/aarch64/aarch64-protos.h (aarch64_err_no_fpadvsimd): New.

	* config/aarch64/aarch64.md (mov<mode>/GPF, movtf): Use
	aarch64_err_no_fpadvsimd.

	* config/aarch64/aarch64.c (aarch64_err_no_fpadvsimd): New.
	(aarch64_layout_arg, aarch64_init_cumulative_args): Use
	aarch64_err_no_fpadvsimd if !TARGET_FLOAT and we need FP regs.
	(aarch64_expand_builtin_va_start, aarch64_setup_incoming_varargs):
	Turn error into assert, test TARGET_FLOAT.
	(aarch64_gimplify_va_arg_expr): Use aarch64_err_no_fpadvsimd, test
	TARGET_FLOAT.

2015-06-24  Aldy Hernandez  <aldyh@redhat.com>

	PR debug/66482
	* dwarf2out.c (gen_formal_parameter_die): Remove assert.

2015-06-24  Ilya Enkovich  <enkovich.gnu@gmail.com>

	* tree-vect-slp.c (vect_build_slp_tree_1): Init vectype.

2015-06-24 Renlin Li <renlin.li@arm.com>

	* config/aarch64/aarch64.h(TARGET_CPU_CPP_BUILTINS): Add
	__ARM_ALIGN_MAX_PWR, __ARM_ALIGN_MAX_STACK_PWR.

2015-06-24  Richard Biener  <rguenther@suse.de>

	* genmatch.c (enum tree_code): Add VIEW_CONVERT[012].
	(main): Likewise.
	(lower_opt_convert): Support lowering of conditional view_convert.
	(parser::parse_operation): Likewise.
	(parser::parse_for): Likewise.

2015-06-24  Renlin Li  <renlin.li@arm.com>

	* varasm.c (emit_local): Use unsigned int for align variable.

2015-06-24  Ramana Radhakrishnan  <ramana.radhakrishnan@arm.com>

	PR target/63408
	* config/arm/arm.c (vfp3_const_double_for_fract_bits): Disable
	for negative numbers.

2015-06-24  Andreas Krebbel  <krebbel@linux.vnet.ibm.com>

	PR rtl-optimization/66306
	* reload.c (find_reloads): Swap the match_dup info for
	commutative operands.

2015-06-24  Andreas Krebbel  <krebbel@linux.vnet.ibm.com>

	* config/s390/vx-builtins.md
	("vec_scatter_element<mode>_<non_vec_int>")